--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
         {% endif %}
     {% endwith %}
 
-    <div class="spacer col-12"></div>
+    <div class="spacer-top col-12"></div>
 
     <form class="form form-login form-group login-container" method="POST" action="{{url_for('login')}}">
             <legend class="login">Login</legend>
@@ -21,23 +21,19 @@
                 </div>
                 <input type="text" name="username" id="username" placeholder="Username" class="form-control"/>
             </div>
-
-            
-            
             <br>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
                     <label for="password" class="input-group-text">Password: </label>
                     
                 </div>
-                <!-- <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1"> -->
                 <input type="password" name="password" id="password" placeholder="password" class="form-control"/>
             </div>
-            
             <br>
             <div class="submit-container">
                 <button type="submit" class="submit submit-login btn btn-success">Lets go!</button>
             </div>
     </form>
-    <div class="spacer col-12"></div>
+    
+    <div class="spacer-bottom col-12"></div>
 {% endblock %}
