--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="spacer col-12"></div>
+<div class="spacer-top col-12"></div>
 
 <form class="form form-register form-group" action="{{url_for('register')}}" method="POST">
     <legend class="singup">Signup</legend>
@@ -32,5 +32,5 @@
     <button type="submit" value="Submit" class="btn btn-success">Submit</button>
 </form>
 
-<div class="spacer col-12"></div>
+<div class="spacer-bottom col-12"></div>
 {% endblock %}
