--- a/templates/user.html
+++ b/templates/user.html
@@ -1,16 +1,15 @@
 {% extends 'base.html' %}
-{% block title %}{{ username }}{% endblock %}
+{% block title %}{{ username|capitalize }}{% endblock %}
 {% block content %}
 
 <div class="container">
     <div class="row user-container">
         <div class="col-12 text-white">
             <div class="user">
-                <h1>Hi {{username}}!</h1>
+                <h1>Hi {{username|capitalize}}!</h1>
             </div>
             <div class="col-12">
-                
-                
+                <p>This are all the post you have shared.</p>
             </div>
             <table class="table table-striped table-light">
                 <thead> 
@@ -26,7 +25,7 @@
                     <tr>
                         <td>{{post.post_title}}</td>
                         <td>{{post.post_subtitle}}</td>
-                        <td>{{post.date_posted.strftime('%d/%b/%Y')}}</td>
+                        <td class="date-posted-user">{{post.date_posted.strftime('%d/%b/%Y')}}</td>
                     </tr>
                     {% endif %}
                 {% endfor %}
