--- a/templates/login.html
+++ b/templates/login.html
@@ -2,14 +2,6 @@
 {% block title %}Login{% endblock %}
 {% block content %}
 
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-                <p>{{ message }}</p>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-
     <div class="spacer-top col-12"></div>
 
     <form class="form form-login form-group login-container" method="POST" action="{{url_for('login')}}">
@@ -29,7 +21,16 @@
                 </div>
                 <input type="password" name="password" id="password" placeholder="password" class="form-control"/>
             </div>
-            <br>
+            <div class="col-12">
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        {% for message in messages %}
+                            <p>{{ message }}</p>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+
+            </div>
             <div class="submit-container">
                 <button type="submit" class="submit submit-login btn btn-success">Lets go!</button>
             </div>
