--- a/templates/post.html
+++ b/templates/post.html
@@ -117,7 +117,7 @@
                         still to be stored because of the name given on each image, causing that some of posts displaying wrong images.
                             </li>
                             <li>
-                                Make sure each image are named according to the game title and subtitle, and not just a simple numbre, like -<u>01.jpg</u>- as example.
+                                The recommendation is to name each image according to the name of the game, title and subtitle, and not just a simple number, like -<u>01.jpg</u>- as example.
                             </li>
                         </ul>                 
                 </div>
