--- a/templates/register.html
+++ b/templates/register.html
@@ -6,38 +6,43 @@
 <div class="spacer-top col-12"></div>
 
 <form class="form form-register form-group" action="{{url_for('register')}}" method="POST">
-    <legend class="singup">Signup</legend>
-    <br>
+    <legend class="singup mb-2">Signup</legend>
+    <div class="col-12 gradnstander-curve bg-info my-3 py-3 reg-info">
+        Signing up you will be able to create new posts or edit any others.</br> Bear in mind by 
+        editing other's posts is just to bring to our readers more abundant and accurate information
+    </div>
+
     <div class="input-group mb-3">
         <div class="input-group-prepend">
             <label for="username" class="input-group-text">Username: </label>
         </div>
             <input type="text" id="username" name="username" class="form-control">
     </div>
-    <br>
     <div class="input-group mb-3">
         <div class="input-group-prepend">
             <label for="email" class="input-group-text">Email: </label>
         </div>
         <input type="email" id="email" name="email" class="form-control">
     </div>
-    <br>
     <div class="input-group mb-3">
         <div class="input-group-prepend">
             <label for="password" class="input-group-text">Password: </label>
         </div>
         <input type="password" name="password" id="password" class="form-control">
     </div>
-    <div class="col-12">
+    
         {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                {% for message in messages %}
-                    <p>{{ message }}</p>
-                {% endfor %}
-            {% endif %}
+            <div class="col-12">
+                {% if messages %}
+                    {% for message in messages %}
+                        <p>{{ message }}</p>
+                    {% endfor %}
+                {% endif %}
+            </div>
         {% endwith %}
+    <div class="submit-container">
+        <button type="submit" value="Submit" class="submit btn btn-success">Submit</button>
     </div>
-    <button type="submit" value="Submit" class="btn btn-success">Submit</button>
 </form>
 
 <div class="spacer-bottom col-12"></div>
