Making little changes on the app.py to make it more user friendly, giving a better feedback of what the user would expect to happen after editing a post

--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -119,7 +119,7 @@
                             {% if pegi in post.pegi_rate %}
                                 <input type="radio" class="form-check-input" name="pegi_rate" value="{{pegi}}" id="{{pegi}}" checked>
                             {% else %}
-                                <input type="radio" class="form-check-input" name="pegi_rate" value="{{pegi_r}}" id="{{pegi}}">
+                                <input type="radio" class="form-check-input" name="pegi_rate" value="{{pegi}}" id="{{pegi}}">
                             {% endif %}
                             <label class="" for="{{pegi}}">{{pegi}}</label>
                             <br>
