Dependencies updated requests, urlib3, PyYAML and jinja2

--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
                 <div class="madeby col-sm-12 col-md-6 col-lg-6">
                     <h2>Made by:</h2>
                     <div class="bottleneck">
-                        <a href="https://github.com/Skrkrw" class="je" target="_blank">Jose Enciso</a>
+                        <a href="https://joseenciso.github.io/Jose-Enciso/" class="je" target="_blank">Jose Enciso</a>
                     </div>
                 </div>
             </div>
